# torch_pca

./: .flake8  .gitignore  .markdownlint.json  .pylintrc  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  benchmark.py  checks.sh  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: .pylint.yaml  pypi_deployment.yaml  tests.yaml
docs/: api.rst  comparison.md  conf.py  contributing.md  grad.md  howto.md  index.rst  installation.md  license.md
github_actions_utils/: __init__.py  color.py  pydocstyle_manager.py  pylint_manager.py  pytest_manager.py
src/torch_pca/: __init__.py  ncompo.py  pca_main.py  random_svd.py  svd.py
tests/: input_data.pt  input_data2.pt  input_data3.pt  test_attributes.py  test_fit_transform.py  test_get_cov_prec.py  test_gpu.py  test_grad.py  test_inv_transfo.py  test_ncomponents.py  test_to.py
